[package]
name = "remote-desktop"
version = "0.1.0"
authors = ["srup <sugiyama98i@gmail.com>"]
edition = "2018"

[dependencies]
scrap = "0.5"
repng = "0.2.2"
gtk = "0.4.0"
gdk-pixbuf = "0.4.0"
relm = "0.14.6"
relm-derive = "0.14.6"
enigo = "0.0.12"
serde_derive = "1.0.85"
serde = "1.0.85"
serde_json = "1.0.37"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
